# merge

./: README.md  pyproject.toml
merge/: __init__.py
merge/modules/: merge_func.py
merge/scripts/: merge.py
tests/fixtures/: file1.txt  file2.txt  file3.txt  file4.txt  file5.txt
